--- a/ansible/01.ping.yaml
+++ b/ansible/01.ping.yaml
@@ -1,5 +1,5 @@
 - name: ping the server
-  hosts: web
-  tasks:
+  hosts: web  # which host your anisble wants to connect
+  tasks:      # list of tasks/modules/collections
     - name: ping the server
       ansible.builtin.ping:
