--- a/ansible/02-multi-play.yaml
+++ b/ansible/02-multi-play.yaml
@@ -4,3 +4,14 @@
   tasks:
   - name: PLAY-01 Task-01
     ansible.builtin.debug:
+      msg: "This is from PLAY-01 and TASK-01"
+
+- name: PLAY-02
+  hosts: web 
+  tasks:
+  - name: PLAY-02 Task-01
+    ansible.builtin.debug:
+      msg: "This is from PLAY-02 and TASK-01"
+  - name: PLAY-02 Task-01
+    ansible.builtin.debug:
+      msg: "This is from PLAY-02 and TASK-02"
