--- a/ansible/03-nginx.yaml
+++ b/ansible/03-nginx.yaml
@@ -5,9 +5,9 @@
   - name: Install nginx
     ansible.builtin.package:
       name: nginx
-      state: absent
+      state: present
 
-  # - name: run nginx 
-  #   ansible.builtin.service:
-  #     name: nginx
-  #     state: started
+  - name: run nginx 
+    ansible.builtin.service:
+      name: nginx
+      state: started
