--- a/ansible/05-task-level-vars.yaml
+++ b/ansible/05-task-level-vars.yaml
@@ -11,4 +11,6 @@
 
   - name: Print the information again
     ansible.builtin.debug:
+    vars: 
+      TRAINER: 'Lakshim Obulesu'
       msg: "Hi I am a learing {{COURSE}}, Duration is: {{DURATION}}, Trainer:{{TRAINER}} "
