--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -3,6 +3,6 @@
 
 
 [web:vars]
-COURSE: "Ansible"
-DURATION: "120HRS"
-TRAINER: "Ravindra"
+COURSE= "Ansible"
+DURATION= "120HRS"
+TRAINER= "Ravindra"
