--- a/ansible/vars.yaml
+++ b/ansible/vars.yaml
@@ -1,3 +1,3 @@
-COURSE: "Devops with Aws from files"
-DURATION: "120HRS" 
-TRAINER: "Ramana" 
+# COURSE: "Devops with Aws from files"
+# DURATION: "120HRS" 
+# TRAINER: "Ramana" 
