--- a/ansible/10-vars-preference.yaml
+++ b/ansible/10-vars-preference.yaml
@@ -12,8 +12,8 @@
     private: false 
   tasks:
     - name: print the information
-      vars:
-        # COURSE: "DevOps with AWS from TASK level"
+      # vars:
+      #   #COURSE: "DevOps with AWS from TASK level"
       ansible.builtin.debug:
         msg: "Hi, I am learning {{COURSE}}"
 
