--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -2,7 +2,7 @@
 172.31.36.59
 
 
-[web:vars]
-COURSE= "Ansible from Inventory"
-DURATION= "120HRS"
-TRAINER= "Ravindra"
+; [web:vars]
+; COURSE= "Ansible from Inventory"
+; DURATION= "120HRS"
+; TRAINER= "Ravindra"
