--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,29 +1,28 @@
-192.168.1.1
-192.168.1.2
-192.168.1.3
-192.168.1.4
+; 192.168.1.1
+; 192.168.1.2
+; 192.168.1.3
+; 192.168.1.4
 
 
 
-[web]
-172.31.36.59
-172.31.36.50
-172.31.36.60
+; [web]
+; 172.31.36.59
 
-[backend]
-192.168.1.10
-192.168.1.11
-192.168.1.12
 
-[mysql]
-192.168.1.20
-192.168.1.30
-192.168.1.40
-192.168.1.50
+; [backend]
+; 192.168.1.10
+; 192.168.1.11
+; 192.168.1.12
 
-[servers:childern]
-web
-backend
+; [mysql]
+; 192.168.1.20
+; 192.168.1.30
+; 192.168.1.40
+; 192.168.1.50
+
+; [servers:childern]
+; web
+; backend
 
 [local]
 localhost
