--- a/ansible/12-condition.yaml
+++ b/ansible/12-condition.yaml
@@ -1,5 +1,6 @@
 - name: check a number is less than 10  or not 
   hosts: local
+  conneciton: local
   vars_prompt:
   - name: my_number 
     prompt: Please enter the number 
