--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -5,8 +5,8 @@
 
 
 
-; [web]
-; 172.31.36.59
+[web]
+172.31.36.59
 
 
 ; [backend]
@@ -24,5 +24,5 @@
 ; web
 ; backend
 
-[local]
-localhost
+; [local]
+; localhost
