--- a/ansible/14-gather-facts.yaml
+++ b/ansible/14-gather-facts.yaml
@@ -1,7 +1,7 @@
 - name: gathering facts
-  hosts: web 
-  become: yes 
+  hosts: web
+  become: yes
   tasks:
-  - name: print the facts 
+  - name: print the facts
     ansible.builtin.debug:
-      msg: "{{ansible_fact}}"
+      msg: " {{ ansible_facts }}"
