--- a/ansible/18-loop.yaml
+++ b/ansible/18-loop.yaml
@@ -8,7 +8,7 @@
       state: "{{ item.state }}"
 
     loop:
-    - { name: 'mysql', state: 'absent'}
-    - { name: 'nginx', state: 'absent'}
+    - { name: 'mysql', state: 'present'}
+    - { name: 'nginx', state: 'present'}
     - { name: 'postfix', state: 'absent'}
     - { name: 'nginx', state: 'absent'}
