--- a/ansible/19-filters.yaml
+++ b/ansible/19-filters.yaml
@@ -6,5 +6,7 @@
     ansible.builtin.debug:
       msg: "Hello {{ course | default ('Ansible') }}" #If undefined variable then default can call the variable = Handling undefined variables
   - name: convert to uppercase
+    vars: 
+      greeting: "Hello Ramana"
     ansible.builtin.debug:
       msg: "{{ greeting | upper }}"
