--- a/ansible/19-filters.yaml
+++ b/ansible/19-filters.yaml
@@ -25,4 +25,4 @@
     vars: 
       numbers: [ 1,2,3,2,54,5,2,4,2 ]
     ansible.builtin.debug:
-      msg: Mim "{{numbers | mim  }} , Max {{ numbers | max }}"
+      msg: "Mim {{numbers | mim  }} , Max {{ numbers | max }}"
