--- a/ansible/20-command-vs-shell.yaml
+++ b/ansible/20-command-vs-shell.yaml
@@ -3,4 +3,4 @@
   connection: local
   tasks:
   - name: execute the command
-    ansible.builtin.command: ls -ltr 
+    ansible.builtin.command: ls -ltr > /tmp/output.txt
