--- a/ansible/20-command-vs-shell.yaml
+++ b/ansible/20-command-vs-shell.yaml
@@ -4,3 +4,8 @@
   tasks:
   - name: execute the command
     ansible.builtin.shell: ls -ltr > /tmp/output.txt
+      # shell moule: its login to the server and execute command inside server : shell module
+      # just issue the command: command module
+  - name: check the process
+    ansible.builtin.shell: ps -ef | grep ssh 
+    register: output 
