--- a/ansible/21-create-ec2-r53.yaml
+++ b/ansible/21-create-ec2-r53.yaml
@@ -26,3 +26,18 @@
       security_group: "{{ sg_id }}"
     loop: "{{ instances }}"
     register: ec2_instance
+  - name: print the output
+    ansible.builtin.debug:
+      msg: "{{ ec2_instance }}"
+
+  # - name: Create r53 private records
+  #   amazon.aws.route53:
+  #     state: present
+  #     zone: "{{ zone }}"
+  #     record: "{{ item.item }}.{{ zone }}"  # mysql.ramana3490.online
+  #     type: A
+  #     ttl: 1
+  #     value: "{{ item.instance[0].private_ip_address }}" 
+  #     wait: true
+  #     overwrite: true 
+  #   loop: "{{  }}"
