--- a/ansible/21-create-ec2-r53.yaml
+++ b/ansible/21-create-ec2-r53.yaml
@@ -40,4 +40,4 @@
       value: "{{ item.instance[0].private_ip_address }}" 
       wait: true
       overwrite: true 
-    loop: "{{ ec2_instance.results }}"
+    loop: "{{ ec2_instances.results }}"
