--- a/ansible/21-create-ec2-r53.yaml
+++ b/ansible/21-create-ec2-r53.yaml
@@ -28,7 +28,7 @@
     register: ec2_instance
   - name: print the output
     ansible.builtin.debug:
-      msg: "{{ ec2_instance }}"
+      msg: "{{ ec2_instances }}"
 
   - name: Create r53 private records
     amazon.aws.route53:
