--- a/ansible/21-create-ec2-r53.yaml
+++ b/ansible/21-create-ec2-r53.yaml
@@ -26,18 +26,32 @@
       security_group: "{{ sg_id }}"
     loop: "{{ instances }}"
     register: ec2_instance
+  
   - name: print the output
     ansible.builtin.debug:
       msg: "{{ ec2_instances }}"
 
-  - name: Create r53 private records
+  - name: create r53 private records
     amazon.aws.route53:
       state: present
       zone: "{{ zone }}"
-      record: "{{ item.item }}.{{ zone }}"  # mysql.ramana3490.online
+      record: "{{item.item}}.{{ zone }}"  #mysql.ramana3490.online
       type: A
       ttl: 1
-      value: "{{ item.instance[0].private_ip_address }}" 
+      value: "{{ item.instances[0].private_ip_address }}"
       wait: true
-      overwrite: true 
+      overwrite: true
     loop: "{{ ec2_instances.results }}"
+
+  # - name: create r53 public record for frontend
+  #   amazon.aws.route53:
+  #     state: present
+  #     zone: "{{ zone }}"
+  #     record: "{{ zone }}"  #ramana3490.online
+  #     type: A
+  #     ttl: 1
+  #     value: "{{ item.instances[0].public_ip_address }}"
+  #     wait: true
+  #     overwrite: true
+  #   loop: "{{ ec2_instances.results }}"
+  #   when: item.item == "frontend"
