--- a/expense-ansible/mysql.yaml
+++ b/expense-ansible/mysql.yaml
@@ -6,4 +6,10 @@
     ansible.builtin.package:
       name: mysql-server
       state: present 
+  - name: Start and enable mysql
+    ansible.builtin.service:
+      name: mysqld 
+      state: started 
+      enabled: yes 
+      
 
