--- a/expense-ansible/mysql.yaml
+++ b/expense-ansible/mysql.yaml
@@ -25,3 +25,6 @@
   - name: Print mysql information
     ansible.builtin.debug:
       msg: "{{ mysql_info }}"
+  - name: setup MySQL root password 
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{mysql_root_password}}"
+    when: mysql_info.failed is true 
