--- a/expense-ansible/backend.yaml
+++ b/expense-ansible/backend.yaml
@@ -8,10 +8,14 @@
   - name: enable nodejs 20
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
-  - name: install nodejs 
+  - name: install nodejs and mysql  
     ansible.builtin.package:
       name: "{{ item }}" 
       state: present 
     loop:
     - nodejs 
     - mysql 
+
+  - name: Create expense user 
+    ansible.builtin.user: 
+      name: expense 
