--- a/expense-ansible/backend.yaml
+++ b/expense-ansible/backend.yaml
@@ -19,3 +19,29 @@
   - name: Create expense user 
     ansible.builtin.user: 
       name: expense 
+
+  - name: Create app directory
+    ansible.builtin.file:
+      path: /app 
+      state: directory
+
+  - name: Download the backend code 
+    ansible.builtin.get_url:
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+      dest: /tmp/backend.zip
+
+  - name: Extract the code 
+    ansible.builtin.unarchive:
+      src: /tmp/backend.zip
+      dest: /app
+      remote_src: yes   
+
+  - name: install dependencies
+    ansible.builtin.command: npm install 
+    args:
+      chdir: /app 
+
+  - name: Copi backend service 
+    ansible.builtin.copy:
+      src: backend.service
+      dest: /etc/systemd/system/backend.service
