--- a/expense-ansible/backend.yaml
+++ b/expense-ansible/backend.yaml
@@ -1,6 +1,9 @@
 - name: configuration backend server 
   hosts: backend 
   become: yes 
+  vars:
+    mysql_root_password: ExpenseApp@1
+    login_host: mysql.ramana3490.online
   tasks:
   - name: disable default nodejs
     ansible.builtin.command: dnf module disable nodejs -y
@@ -45,3 +48,20 @@
     ansible.builtin.copy:
       src: backend.service
       dest: /etc/systemd/system/backend.service
+  
+  - name: import mysql data
+    community.mysql.mysql_db:
+      login_user: root 
+      login_password: "{{ mysql_root_password }}"
+      login_host: "{{  login_host }}"
+      target: /app/schema/backend.sql
+      name: all
+      state: import
+  - name: daemon-reload
+    ansible.builtin.systemd_service:
+      state: restarted
+      daemon_reload: true
+      name: backend
+
+
+  
