--- a/expense-ansible/backend.yaml
+++ b/expense-ansible/backend.yaml
@@ -48,7 +48,13 @@
     ansible.builtin.copy:
       src: backend.service
       dest: /etc/systemd/system/backend.service
-  
+      
+  - name: ansible to install pymysql
+    ansible.builtin.pip:
+      name: 
+      - PyMySQL
+      executable: pip3.9
+
   - name: import mysql data
     community.mysql.mysql_db:
       login_user: root 
@@ -57,6 +63,7 @@
       target: /app/schema/backend.sql
       name: all
       state: import
+  
   - name: daemon-reload
     ansible.builtin.systemd_service:
       state: restarted
