--- a/expense-ansible/inventory.ini
+++ b/expense-ansible/inventory.ini
@@ -4,6 +4,8 @@ mysql.ramana3490.online
 [backend]
 backend.ramana3490.online 
 
+[frontend]
+frontend.ramana3490.online
 
 [all:vars]
 ansible_user=ec2-user 
