--- a/expense-ansible/frontend.yaml
+++ b/expense-ansible/frontend.yaml
@@ -15,5 +15,21 @@
     ansible.builtin.file:
       path: /usr/share/nginx/html
       state: absent 
-      
+
+  - name: create html directory 
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: directory
+
+  - name: Download the frontend
+    ansible.builtin.get_url:
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+      dest: /tmp/frontend.zip
+
+  - name: Extract the code 
+    ansible.builtin.unarchive:
+      src: /tmp/frontend.zip
+      dest: /usr/share/nginx/html
+      remote_src: yes
+  
 
