--- a/expense-ansible-roles/backend.yaml
+++ b/expense-ansible-roles/backend.yaml
@@ -1,5 +1,5 @@
-- name: configuration backend server 
+- name: configure backend server
   hosts: backend 
-  become: yes 
+  become: yes
   roles:
   - backend
