--- a/expense-ansible-roles/roles/frontend/tasks/main.yaml
+++ b/expense-ansible-roles/roles/frontend/tasks/main.yaml
@@ -32,10 +32,9 @@
   ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
-  notify:
-        - Restart nginx
-# - name: restat nginx 
-#   ansible.builtin.service:
-#     name: nginx 
-#     state: restarted 
+ 
+- name: restat nginx 
+  ansible.builtin.service:
+    name: nginx 
+    state: restarted 
 
