--- a/expense-ansible-roles/roles/backend/tasks/main.yaml
+++ b/expense-ansible-roles/roles/backend/tasks/main.yaml
@@ -16,21 +16,26 @@
   ansible.builtin.user: 
     name: expense 
 
-- name: Create app directory
-  ansible.builtin.file:
-    path: /app 
-    state: directory
+# - name: Create app directory
+#   ansible.builtin.file:
+#     path: /app 
+#     state: directory
 
-- name: Download the backend code 
-  ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
-    dest: /tmp/backend.zip
+# - name: Download the backend code 
+#   ansible.builtin.get_url:
+#     url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+#     dest: /tmp/backend.zip
 
-- name: Extract the code 
-  ansible.builtin.unarchive:
-    src: /tmp/backend.zip
-    dest: /app
-    remote_src: yes   
+# - name: Extract the code 
+#   ansible.builtin.unarchive:
+#     src: /tmp/backend.zip
+#     dest: /app
+#     remote_src: yes   
+
+- name: import tasks from common role 
+  ansible.builtin.import_role:
+      name: common
+      tasks_from: app-pre-req
 
 - name: install dependencies
   ansible.builtin.command: npm install 
