--- a/expense-ansible-roles/roles/common/tasks/app-pre-req.yaml
+++ b/expense-ansible-roles/roles/common/tasks/app-pre-req.yaml
@@ -1,16 +1,16 @@
-- name: remove existing app location 
-  ansible.builtin.files:
-    path: "{{ app_location  }}"
+- name: remove existing app location
+  ansible.builtin.file:
+    path: "{{ app_location }}"
     state: absent
   ignore_errors: true
 
-- name: Create app directory
+- name: create app directory
   ansible.builtin.file:
-    path: "{{ app_location }}" 
+    path: "{{ app_location }}"
     state: directory
 
-- name: Download the {{ component }} code 
+- name: "download the {{ component }} code"
   ansible.builtin.unarchive:
     src: https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{ component }}-v2.zip
-    dest:  "{{ app_location }}"
+    dest: "{{ app_location }}"
     remote_src: yes
