--- a/expense-ansible-roles/roles/backend/tasks/main.yaml
+++ b/expense-ansible-roles/roles/backend/tasks/main.yaml
@@ -33,11 +33,15 @@
 #     remote_src: yes   
 
 - name: import tasks from common role 
+  tags: 
+  - deployment
   ansible.builtin.import_role:
       name: common
       tasks_from: app-pre-req
 
 - name: install dependencies
+  tags: 
+    - deployment
   ansible.builtin.command: npm install 
   args:
     chdir: /app 
@@ -64,6 +68,8 @@
     state: import
 
 - name: daemon-reload
+  tags: 
+  - deployment
   ansible.builtin.systemd_service:
     state: restarted
     daemon_reload: true
